updates per review

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								<!--DC's Premier Event Coordinator-->
 							<!--</div>-->
               <div id="transform">
-                <img class="purple-transform" src="assets/images/logos/swann_planning_logo_dark_purple_short.png">
+                <img class="purple-transform" src="assets/images/logos/swann_planning_logo_colored_light_short.png">
                 <img class="white-transform" src="assets/images/logos/swann_planning_logo_white_short.png">
               </div>
 							<!--<a href="#about" class="section-scroll btn btn-border-w btn-round">Learn More</a>-->
@@ -141,8 +141,8 @@
 				<div class="col-sm-8 col-sm-offset-2">
 
 					<div class="module-subtitle story font-serif">
-						“Swann Planning strives to positively impact lives not only during the event, but more importantly in the future. I feel truly accomplished when people take time out of their day to
-						reminisce about the amazing time they had at an event Swann Planning coordinated.”<br/>
+						“Swann Planning strives to positively impact lives not only during the event, but more importantly in the future. I truly feel accomplished when people take time to
+						reminisce about the amazing time they had at a Swann Planning event.”<br/>
 
 						- India Howard, Founder/CEO
 					</div>
@@ -255,7 +255,7 @@
 						</div>
 						<div class="work-caption font-alt">
 							<h3 class="work-title">Petite Planning</h3>
-							<h5 class="work-subtitle">(Day-of Planning)</h3>
+							<h5 class="work-subtitle">(Day-of Planning)</h5>
 							<div class="work-descr">
 								Weddings
 							</div>
@@ -394,49 +394,7 @@
 				</div><!-- .row -->
 
 				<div class="row">
-
-					<!-- Team item star -->
-					<!--<div class="col-sm-6 col-md-3 col-md-offset-4 mb-sm-20 wow fadeInUp">-->
-					<div class="col-sm-6 col-md-offset-2 col-md-3 mb-sm-20 wow fadeInUp">
-            <div class="team-item">
-              <!-- Uncomment '.team-image` styles after adding social media back -->
-							<div class="team-image">
-								<img src="./assets/images/swann_profile_photos/swann_photo_1.jpg" alt="">
-								<div class="team-detail">
-									<!--<h5 class="font-serif story">I'm India!</h5>-->
-									<!--<p class="font-serif story">stuff here about you</p>-->
-									<!--<div class="team-social">-->
-										<!--<a href="#"><i class="fa fa-facebook"></i></a>-->
-										<!--<a href="#"><i class="fa fa-twitter"></i></a>-->
-										<!--<a href="#"><i class="fa fa-dribbble"></i></a>-->
-										<!--<a href="#"><i class="fa fa-skype"></i></a>-->
-									<!--</div>-->
-								</div>
-							</div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 mb-sm-20 wow fadeInUp">
-            <div class="team-item">
-              <div class="team-image">
-                <img src="./assets/images/swann_profile_photos/swann_photo_2.png" alt="">
-                <div class="team-detail">
-                  <!--<h5 class="font-serif story">I'm India!</h5>-->
-                  <!--<p class="font-serif story">stuff here about you</p>-->
-                  <!--<div class="team-social">-->
-                  <!--<a href="#"><i class="fa fa-facebook"></i></a>-->
-                  <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
-                  <!--<a href="#"><i class="fa fa-dribbble"></i></a>-->
-                  <!--<a href="#"><i class="fa fa-skype"></i></a>-->
-                  <!--</div>-->
-                </div>
-              </div>
-              <div class="team-descr font-alt">
-                <div class="team-name color-purple strong large-text">India Howard</div>
-                <div class="team-role large-text">Swann Planning Founder</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3 mb-sm-20 wow fadeInUp">
+          <div class="col-sm-6 col-sm-offset-4 col-md-4 mb-sm-20 wow fadeInUp ">
             <div class="team-item">
               <div class="team-image">
                 <img src="./assets/images/swann_profile_photos/swann_photo_3.jpg" alt="">
@@ -451,11 +409,24 @@
                   <!--</div>-->
                 </div>
               </div>
+              <div class="team-name color-purple strong testimonial-text font-serif large-text">India Howard</div>
+              <div class="team-role large-text testimonial-text font-serif">Founder/CEO</div>
 						</div>
 					</div>
+          <div class="col-sm-8 col-md-offset-2">
+            <div class="module-subtitle story font-serif">
+              Born in Texas and raised in Georgia, India is a southern lady who has always been called the social butterfly amongst her family, friends, and peers. While growing up, she developed a niched for making a simple gathering extravagant and fun. India attended howard university and earned a Bachelor’s degree in radio, television, and film. After coordinating and developing a love for events throughout her collegiate career, India took a leap of faith to become D.C.’s next elite event planner
+
+              After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, LLC., India strives to design an event to remember.
+
+              Swann Planning derives from India’s Desire and eagerness for people gathering and enjoying themselves. Over the years she has learned that it doesn’t take much to fulfill her desire. Simplicity can always transform into something unique and timeless, and India incorporates this method into even design.
+
+              “I bring the ‘less is more’ approach to the design process, along with creativity and passion. Combined with my clients’ inspiration, this approach allows a vision to transform into an elegant event.”
+
+              - India R. Howard
+            </div>
+          </div>
 					<!-- Team item end -->
-
-
 				</div><!-- .row -->
 
 			</div>
@@ -485,7 +456,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-serif">“Couples make a choice to stay in love forever, and <span class="color-purple">Swann Planning</span> chooses to showcase this love to everyone.</blockquote>
+									<blockquote class="testimonial-text font-serif">“Couples make a choice to stay in love forever, and <span class="color-purple">Swann Planning</span> chooses to showcase this love to everyone."</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -524,7 +495,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-serif">"Swann events thrive from clients' imagination, which <span class="color-purple">transforms</span> into endless and exciting possibilities.</blockquote>
+									<blockquote class="testimonial-text font-serif">"Swann events thrive from clients' imagination, which <span class="color-purple">transforms</span> into endless and exciting possibilities."</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -563,7 +534,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-serif">"The goal is to conceive a moment for people that transforms into an irreplaceable <span class="color-purple">memory</span>.</blockquote>
+									<blockquote class="testimonial-text font-serif">"The goal is to conceive a moment for people that transforms into an irreplaceable <span class="color-purple">memory</span>."</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -602,7 +573,7 @@
               <div class="row">
 
                 <div class="col-sm-8 col-sm-offset-2">
-                  <blockquote class="testimonial-text font-serif">"After years of experience, the best lesson is that events are <span class="color-purple">successful</span> when clients have the utmost faith in my capability.</blockquote>
+                  <blockquote class="testimonial-text font-serif">"After years of experience, the best lesson is that events are <span class="color-purple">successful</span> when clients have the utmost faith in my capability."</blockquote>
                 </div>
 
               </div><!-- .row -->
@@ -648,28 +619,28 @@
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<form id="contact-form" role="form" novalidate="">
+						<form id="contact-form" class="contact-form" role="form" novalidate="">
 
 							<div class="form-group">
 								<label class="sr-only" for="cname">Name</label>
-								<input type="text" id="cname" class="form-control" name="cname" placeholder="Name*" required="" data-validation-required-message="Please enter your name.">
+								<input type="text" id="cname" class="form-control" name="cname" placeholder="Name*" required="required" data-validation-required-message="Please enter your name.">
 								<p class="help-block text-danger"></p>
 							</div>
 
 							<div class="form-group">
 								<label class="sr-only" for="cemail">Your Email</label>
-								<input type="email" id="cemail" name="cemail" class="form-control" placeholder="Your E-mail*" required="" data-validation-required-message="Please enter your email address.">
+								<input type="email" id="cemail" name="cemail" class="form-control" placeholder="Your E-mail*" required="required" data-validation-required-message="Please enter your email address.">
 								<p class="help-block text-danger"></p>
 							</div>
 
               <div class="form-group">
                 <label class="sr-only" for="cemail">Your Email</label>
-                <input type="phone" id="cnumber" name="cnumber" class="form-control" placeholder="YOUR PHONE NUMBER" required="" data-validation-required-message="Please enter your phone number.">
+                <input type="phone" id="cnumber" name="cnumber" class="form-control" placeholder="YOUR PHONE NUMBER*" required="required" data-validation-required-message="Please enter your phone number.">
                 <p class="help-block text-danger"></p>
               </div>
 
 							<div class="form-group">
-								<textarea class="form-control" id="cmessage" name="cmessage" rows="7" placeholder="Message*" required="" data-validation-required-message="Please enter your message."></textarea>
+								<textarea class="form-control" id="cmessage" name="cmessage" rows="7" placeholder="Message*" required="required" data-validation-required-message="Please enter your message."></textarea>
 								<p class="help-block text-danger"></p>
 							</div>
 
@@ -679,7 +650,9 @@
 
 						</form>
 
-            <img src="assets/images/logos/swann_logo_color.jpg" alt="Swann Planning Color Logo">
+            <div class="col-sm-8 col-sm-offset-2">
+              <img src="assets/images/logos/swann_logo_color.jpg" alt="Swann Planning Color Logo">
+            </div>
 
 						<!-- Ajax response -->
 						<div id="contact-response" class="ajax-response font-alt"></div>
