--- a/profiles/celebrations/anniversaries.html
+++ b/profiles/celebrations/anniversaries.html
@@ -105,7 +105,10 @@
               <div class="portfolio-overlay">
                 <div class="inner-overlay col-xs-8 col-xs-offset-2">
                   <h1>Anniversaries</h1>
-                  <p class="description">“To celebrate love with someone, for eternity, is an accomplishment… Swann Planning will portray this love others may desire."</p>
+                  <p class="description">
+                    To celebrate love with someone, for eternity, is an accomplishment…<br/>
+                    Swann Planning will portray this love others may desire.
+                  </p>
                 </div>
               </div>
 
