--- a/profiles/celebrations/milestones_moments.html
+++ b/profiles/celebrations/milestones_moments.html
@@ -106,7 +106,8 @@
                 <div class="inner-overlay col-xs-8 col-xs-offset-2">
                   <h1>Monumental Moments</h1>
                   <p class="description">
-                    Life is an opportunity that can be transformed into milestones... When that milestone occurs, a celebration is in order!
+                    Life is an opportunity that can be transformed into milestones... <br/>
+                    When that milestone occurs, a celebration is in order!
                   </p>
                 </div>
               </div>
