--- a/profiles/corporate/corp_celebration.html
+++ b/profiles/corporate/corp_celebration.html
@@ -106,7 +106,7 @@
                 <div class="inner-overlay col-xs-8 col-xs-offset-2">
                   <h1>Monumental Celebrations</h1>
                   <p class="description">
-                    Swann Planning events create that loose atmosphere employees look for at a company event.. <br />
+                    Swann Planning events create that loose atmosphere employees look for at a company event.. x<br />
                     When this is done right, it gives employees a sense of accomplishment you couldn't imagine.
                   </p>
                 </div>
