--- a/profiles/corporate/holiday.html
+++ b/profiles/corporate/holiday.html
@@ -105,10 +105,8 @@
               <div class="portfolio-overlay">
                 <div class="inner-overlay col-xs-8 col-xs-offset-2">
                   <h1>Holiday Soiree</h1>
-                  <h3>Swann Planning takes one more task off the “To-Do” list.
-                    </h3>
                   <p class="description">
-                    "During the most wonderful time of the year... <br /> It's important to Swann Planning to create a jovial moment for your company."
+                    During the most wonderful time of the year... <br /> It's important to Swann Planning to create a jovial moment for your company.
                   </p>
                 </div>
               </div>
