--- a/profiles/corporate/meetings.html
+++ b/profiles/corporate/meetings.html
@@ -105,11 +105,9 @@
               <div class="portfolio-overlay">
                 <div class="inner-overlay col-xs-8 col-xs-offset-2">
                   <h1>Meetings</h1>
-                  <h3>Swann Planning takes one more task off the “To-Do” list.
-                    </h3>
                   <p class="description">
                     Events are not meant to make your work load heavier... <br />
-                    Swann Planning takes one or two more tasks of the "To-Do" list.
+                    Swann Planning takes one or two more tasks off the "To-Do" list.
                   </p>
                 </div>
               </div>
