--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
 					<li><a href="#totop">Home</a></li>
 					<li><a href="#about" class="section-scroll">About</a></li>
 					<li><a href="#services" class="section-scroll">Services</a></li>
-					<li><a href="#hello" class="section-scroll">Hello</a></li>
+					<li><a href="#greetings" class="section-scroll">Greetings</a></li>
 					<!--<li><a href="#journal" class="section-scroll">journal</a></li>-->
 					<li><a href="#contact" class="section-scroll">Contact</a></li>
-	
+					<li><a href="#thanks" class="section-scroll">Thanks</a></li>
+
 				</ul>
 			</div>
 	
@@ -235,7 +236,7 @@
 				<li class="work-item weddings">
 					<a href="profiles/weddings/partial_planning.html">
 						<div class="work-image">
-							<img src="assets/images/weddings/partial_planning.jpg" alt="">
+							<img src="assets/images/weddings/wedding.jpg" alt="">
 						</div>
 						<div class="work-caption font-alt">
 							<h3 class="work-title">Partial Planning</h3>
@@ -379,53 +380,50 @@
 		<hr class="divider-w">
 		<!-- Divider -->
 
-		<!-- Hello start -->
-		<section id="hello" class="module">
+		<!-- Greetings start -->
+		<section id="greetings" class="module">
 			<div class="container">
 
 				<div class="row">
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h2 class="module-title font-alt">Hello</h2>
+						<h2 class="module-title font-alt">Greetings</h2>
 
 					</div>
 
 				</div><!-- .row -->
 
 				<div class="row">
-          <div class="col-sm-6 col-sm-offset-4 col-md-4 mb-sm-20 wow fadeInUp ">
-            <div class="team-item">
-              <div class="team-image">
-                <img src="./assets/images/swann_profile_photos/swann_photo_3.jpg" alt="">
-                <div class="team-detail">
-                  <!--<h5 class="font-serif story">I'm India!</h5>-->
-                  <!--<p class="font-serif story">stuff here about you</p>-->
-                  <!--<div class="team-social">-->
-                  <!--<a href="#"><i class="fa fa-facebook"></i></a>-->
-                  <!--<a href="#"><i class="fa fa-twitter"></i></a>-->
-                  <!--<a href="#"><i class="fa fa-dribbble"></i></a>-->
-                  <!--<a href="#"><i class="fa fa-skype"></i></a>-->
-                  <!--</div>-->
-                </div>
-              </div>
-              <div class="team-name color-purple strong testimonial-text font-serif large-text">India Howard</div>
-              <div class="team-role large-text testimonial-text font-serif">Founder/CEO</div>
-						</div>
-					</div>
-          <div class="col-sm-8 col-md-offset-2">
-            <div class="module-subtitle story font-serif">
-              Born in Texas and raised in Georgia, India is a southern lady who has always been called the social butterfly amongst her family, friends, and peers. While growing up, she developed a niched for making a simple gathering extravagant and fun. India attended howard university and earned a Bachelor’s degree in radio, television, and film. After coordinating and developing a love for events throughout her collegiate career, India took a leap of faith to become D.C.’s next elite event planner
-
-              After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, LLC., India strives to design an event to remember.
-
-              Swann Planning derives from India’s Desire and eagerness for people gathering and enjoying themselves. Over the years she has learned that it doesn’t take much to fulfill her desire. Simplicity can always transform into something unique and timeless, and India incorporates this method into even design.
-
-              “I bring the ‘less is more’ approach to the design process, along with creativity and passion. Combined with my clients’ inspiration, this approach allows a vision to transform into an elegant event.”
-
-              - India R. Howard
-            </div>
+          <div class="col-sm-8 col-sm-offset-4">
+            <ul id="greetings-grid" class="works-grid works-grid-gut works-hover-w">
+              <li class="work-item corporate">
+                <a href="profiles/about.html">
+                  <div class="work-image">
+                    <img src="./assets/images/swann_profile_photos/headshot_new.jpg" alt="" class="team-image profile-image">
+                  </div>
+                  <div class="team-name color-purple strong testimonial-text font-serif large-text">India Howard</div>
+                  <div class="team-role large-text testimonial-text font-serif">Founder/CEO</div>
+                  <div class="work-caption font-alt">
+                    <h3 class="work-title">Meet &amp; Learn More About The Founder</h3>
+                  </div>
+                </a>
+              </li>
+            </ul>
           </div>
+          <!--<div class="col-sm-8 col-md-offset-2">-->
+            <!--<div class="module-subtitle story font-serif">-->
+              <!--Born in Texas and raised in Georgia, India is a southern lady who has always been called the social butterfly amongst her family, friends, and peers. While growing up, she developed a niched for making a simple gathering extravagant and fun. India attended howard university and earned a Bachelor’s degree in radio, television, and film. After coordinating and developing a love for events throughout her collegiate career, India took a leap of faith to become D.C.’s next elite event planner-->
+
+              <!--After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, LLC., India strives to design an event to remember.-->
+
+              <!--Swann Planning derives from India’s Desire and eagerness for people gathering and enjoying themselves. Over the years she has learned that it doesn’t take much to fulfill her desire. Simplicity can always transform into something unique and timeless, and India incorporates this method into even design.-->
+
+              <!--“I bring the ‘less is more’ approach to the design process, along with creativity and passion. Combined with my clients’ inspiration, this approach allows a vision to transform into an elegant event.”-->
+
+              <!-&#45;&#45; India R. Howard-->
+            <!--</div>-->
+          <!--</div>-->
 					<!-- Team item end -->
 				</div><!-- .row -->
 
@@ -583,8 +581,6 @@
                 <div class="col-sm-4 col-sm-offset-4">
                   <div class="testimonial-author">
                     <div class="testimonial-caption font-alt">
-                      <!--<div class="testimonial-title">Adele Snow</div>-->
-                      <!--<div class="testimonial-descr">SomeCompany INC, CEO</div>-->
                     </div>
                   </div>
                 </div>
@@ -663,6 +659,21 @@
 
 			</div>
 		</section>
+    <section id="thanks" class="module-small bg-dark">
+      <div class="container">
+
+        <div class="row">
+          <div class="widget text-center thanks">
+            <h2 class="module-title font-alt">Thanks!</h2>
+            <p><a href="http://www.jonstrem.com/" target="_blank">Jon Strem</a></p>
+            <p><a href="http://www.rdionefoto.com/" target="_blank">R. Dione Foto</a></p>
+            <p><a href="http://www.nosegayflowers.com/" target="_blank">NoseGay Flowers</a></p>
+            <p><a href="https://www.instagram.com/glamgal85/" target="_blank">@GlameGal85</a></p>
+          </div>
+        </div><!-- .row -->
+
+      </div>
+    </section>
 		<!-- Contact end -->
 
 		<!-- Map start -->
