--- a/profiles/about.html
+++ b/profiles/about.html
@@ -6,19 +6,19 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Swann Planning - Partial Wedding Planning</title>
+  <title>Swann Planning - Celebrations</title>
 
   <!-- CSS -->
-  <link href="../../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../../assets/css/simpletextrotator.css" rel="stylesheet">
-  <link href="../../assets/css/font-awesome.min.css" rel="stylesheet">
-  <link href="../../assets/css/et-line-font.css" rel="stylesheet">
-  <link href="../../assets/css/magnific-popup.css" rel="stylesheet">
-  <link href="../../assets/css/flexslider.css" rel="stylesheet">
-  <link href="../../assets/css/owl.carousel.css" rel="stylesheet">
-  <link href="../../assets/css/animate.css" rel="stylesheet">
-  <link href="../../assets/css/style.css" rel="stylesheet">
-  <link href="../../assets/css/custom.css" rel="stylesheet">
+  <link href="../assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/css/simpletextrotator.css" rel="stylesheet">
+  <link href="../assets/css/font-awesome.min.css" rel="stylesheet">
+  <link href="../assets/css/et-line-font.css" rel="stylesheet">
+  <link href="../assets/css/magnific-popup.css" rel="stylesheet">
+  <link href="../assets/css/flexslider.css" rel="stylesheet">
+  <link href="../assets/css/owl.carousel.css" rel="stylesheet">
+  <link href="../assets/css/animate.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/custom.css" rel="stylesheet">
 </head>
 <body>
 
@@ -39,7 +39,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="../../index.html"><img class='logo-nav' src="../../assets/images/logos/swann_logo_small.png"></a>
+      <a class="navbar-brand" href="../index.html"><img class='logo-nav' src="../assets/images/logos/swann_logo_small.png"></a>
     </div>
 
     <div class="collapse navbar-collapse" id="custom-collapse">
@@ -47,17 +47,18 @@
       <ul class="nav navbar-nav navbar-right">
 
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Partial Wedding Planning</a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">About</a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="../weddings/premier_planning.html">Premier Wedding Planning</a></li>
-            <li><a href="../weddings/partial_planning.html">Partial Wedding Planning</a></li>
-            <li><a href="../weddings/petite_planning.html">Petite Wedding Planning</a></li>
-            <li><a href="../celebrations/milestones_moments.html">Milestones</a></li>
-            <li><a href="../celebrations/anniversaries.html">Anniversaries</a></li>
-            <li><a href="../celebrations/birthdays.html">Birthdays</a></li>
-            <li><a href="../corporate/holiday.html">Holiday Soiree</a></li>
-            <li><a href="../corporate/meetings.html">Meetings</a></li>
-            <li><a href="../corporate/corp_celebration.html">Monumental Celebrations</a></li>
+            <li><a href="weddings/premier_planning.html">Premier Wedding Planning</a></li>
+            <li><a href="weddings/partial_planning.html">Partial Wedding Planning</a></li>
+            <li><a href="weddings/petite_planning.html">Petite Wedding Planning</a></li>
+            <li><a href="celebrations/milestones_moments.html">Milestones</a></li>
+            <li><a href="celebrations/anniversaries.html">Anniversaries</a></li>
+            <li><a href="celebrations/birthdays.html">Birthdays</a></li>
+            <li><a href="corporate/holiday.html">Holiday Soiree</a></li>
+            <li><a href="corporate/meetings.html">Meetings</a></li>
+            <li><a href="corporate/corp_celebration.html">Monumental Celebrations</a></li>
+            <li><a href="about.html">About</a></li>
           </ul>
         </li>
 
@@ -80,9 +81,11 @@
 
         <div class="col-sm-6 col-sm-offset-3">
 
-          <h1 class="module-title font-alt">Partial Wedding Planning</h1>
+          <h1 class="module-title font-alt">Greetings</h1>
           <div class="module-subtitle font-serif mb-0">
-            "Swann Planning <span class="color-purple">views</span> clients' many ideas as a puzzle... Then intricately places them together to create a beautiful <span class="color-purple">picture</span>."
+            “I bring the ‘less is more’ <span class="color-purple">approach</span> to the design and planning process, along with creativity and passion. Combined with my clients’ inspiration, this approach allows a vision to transform into an <span class="color-purple">elegant</span> event.”
+            <br/>
+            - India R. Howard
           </div>
 
         </div>
@@ -96,33 +99,21 @@
   <!-- Portfolio single start -->
   <section class="module">
     <div class="container">
-
       <div class="row">
-
-        <div class="col-sm-12">
+        <div class="col-sm-offset-2 col-sm-8">
           <div class="portfolio-item">
-            <img class="portfolio-image" src="../../assets/images/weddings/wedding.jpg" alt="">
+            <img class="portfolio-image bio-image" src="../assets/images/swann_profile_photos/headshot_about.jpg" alt="">
             <div class="portfolio-overlay">
-              <div class="inner-overlay col-xs-8 col-xs-offset-2">
-                <h1>Partial Wedding Planning </h1>
+              <div class="inner-overlay col-xs-8 col-xs-offset-2 text-center">
+                <h1>India R. Howard</h1>
                 <p class="description">
-                  For the couple that has the conception and majority of the
-
-                  wedding details finalized, the Partial
-
-                  Planning package is perfect! This
-
-                  package helps put all the ducks in a
-
-                  row and finalizes all details, vendor
-
-                  contracts, and schedules. Partial
-
-                  Planning package also provides Post-
-
-                  Wedding Day mailing and final
-
-                  payments for the newlyweds.
+                  Born in Texas and raised in Georgia, India is a southern lady who has always been called the social butterfly amongst her family, friends, and peers. While growing up, she developed a niched for making a simple gathering extravagant and fun. India attended howard university and earned a Bachelor’s degree in radio, television, and film. After coordinating and developing a love for events throughout her collegiate career, India took a leap of faith to become D.C.’s next elite event planner. <br/>
+                </p>
+                <p class="description">
+                  After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, LLC., India strives to design an event to remember.<br/>
+                </p>
+                <p class="description">
+                  Swann Planning derives from India’s Desire and eagerness for people gathering and enjoying themselves. Over the years she has learned that it doesn’t take much to fulfill her desire. Simplicity can always transform into something unique and timeless, and India incorporates this method into even design.<br/>
                 </p>
               </div>
             </div>
@@ -402,7 +393,7 @@
         <div class="row">
 
           <div class="col-sm-6">
-            <p class="copyright font-alt">© 2016 <a href="../../index.html">Swann Planning, LLC</a>, All Rights Reserved.</p>
+            <p class="copyright font-alt">© 2016 <a href="../index.html">Swann Planning, LLC</a>, All Rights Reserved.</p>
           </div>
 
           <div class="col-sm-6">
@@ -430,24 +421,24 @@
   </div>
 
   <!-- Javascript files -->
-  <script src="../../assets/js/jquery-2.1.3.min.js"></script>
-  <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="../../assets/js/jquery.mb.YTPlayer.min.js"></script>
-  <script src="../../assets/js/appear.js"></script>
-  <script src="../../assets/js/jquery.simple-text-rotator.min.js"></script>
-  <script src="../../assets/js/jqBootstrapValidation.js"></script>
+  <script src="../assets/js/jquery-2.1.3.min.js"></script>
+  <script src="../assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="../assets/js/jquery.mb.YTPlayer.min.js"></script>
+  <script src="../assets/js/appear.js"></script>
+  <script src="../assets/js/jquery.simple-text-rotator.min.js"></script>
+  <script src="../assets/js/jqBootstrapValidation.js"></script>
   <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-  <script src="../../assets/js/gmaps.js"></script>
-  <script src="../../assets/js/isotope.pkgd.min.js"></script>
-  <script src="../../assets/js/imagesloaded.pkgd.js"></script>
-  <script src="../../assets/js/jquery.flexslider-min.js"></script>
-  <script src="../../assets/js/jquery.magnific-popup.min.js"></script>
-  <script src="../../assets/js/jquery.fitvids.js"></script>
-  <script src="../../assets/js/smoothscroll.js"></script>
-  <script src="../../assets/js/wow.min.js"></script>
-  <script src="../../assets/js/owl.carousel.min.js"></script>
-  <script src="../../assets/js/contact.js"></script>
-  <script src="../../assets/js/custom.js"></script>
+  <script src="../assets/js/gmaps.js"></script>
+  <script src="../assets/js/isotope.pkgd.min.js"></script>
+  <script src="../assets/js/imagesloaded.pkgd.js"></script>
+  <script src="../assets/js/jquery.flexslider-min.js"></script>
+  <script src="../assets/js/jquery.magnific-popup.min.js"></script>
+  <script src="../assets/js/jquery.fitvids.js"></script>
+  <script src="../assets/js/smoothscroll.js"></script>
+  <script src="../assets/js/wow.min.js"></script>
+  <script src="../assets/js/owl.carousel.min.js"></script>
+  <script src="../assets/js/contact.js"></script>
+  <script src="../assets/js/custom.js"></script>
 
 </body>
 </html>
