--- a/profiles/corporate/holiday.html
+++ b/profiles/corporate/holiday.html
@@ -58,6 +58,7 @@
               <li><a href="holiday.html">Holiday Soiree</a></li>
               <li><a href="meetings.html">Meetings</a></li>
               <li><a href="corp_celebration.html">Monumental Celebrations</a></li>
+              <li><a href="/profiles/about.html">About</a></li>
             </ul>
           </li>
 
