--- a/profiles/celebrations/birthdays.html
+++ b/profiles/celebrations/birthdays.html
@@ -58,6 +58,7 @@
               <li><a href="../corporate/holiday.html">Holiday Soiree</a></li>
               <li><a href="../corporate/meetings.html">Meetings</a></li>
               <li><a href="../corporate/corp_celebration.html">Monumental Celebrations</a></li>
+              <li><a href="/profiles/about.html">About</a></li>
             </ul>
           </li>
 
