--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 				<li class="work-item weddings">
 					<a href="profiles/weddings/partial_planning.html">
 						<div class="work-image">
-							<img src="assets/images/weddings/wedding.jpg" alt="">
+							<img src="assets/images/weddings/partial_planning1.jpg" alt="">
 						</div>
 						<div class="work-caption font-alt">
 							<h3 class="work-title">Partial Planning</h3>
@@ -395,11 +395,11 @@
 				</div><!-- .row -->
 
 				<div class="row">
-          <div class="col-sm-8 col-sm-offset-4">
+          <div class="col-sm-12 col-sm-offset-3">
             <ul id="greetings-grid" class="works-grid works-grid-gut works-hover-w">
               <li class="work-item corporate">
                 <a href="profiles/about.html">
-                  <div class="work-image">
+                  <div class="work-image greetings-image">
                     <img src="./assets/images/swann_profile_photos/headshot_new.jpg" alt="" class="team-image profile-image">
                   </div>
                   <div class="team-name color-purple strong testimonial-text font-serif large-text">India Howard</div>
@@ -415,7 +415,7 @@
             <!--<div class="module-subtitle story font-serif">-->
               <!--Born in Texas and raised in Georgia, India is a southern lady who has always been called the social butterfly amongst her family, friends, and peers. While growing up, she developed a niched for making a simple gathering extravagant and fun. India attended howard university and earned a Bachelor’s degree in radio, television, and film. After coordinating and developing a love for events throughout her collegiate career, India took a leap of faith to become D.C.’s next elite event planner-->
 
-              <!--After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, LLC., India strives to design an event to remember.-->
+              <!--After nearly a decade of coordinating weddings, fundraisers, pageants, and meetings, India can now be called an entrepreneur. CEO and Founder of Swann Planning, L.L.C., India strives to design an event to remember.-->
 
               <!--Swann Planning derives from India’s Desire and eagerness for people gathering and enjoying themselves. Over the years she has learned that it doesn’t take much to fulfill her desire. Simplicity can always transform into something unique and timeless, and India incorporates this method into even design.-->
 
@@ -665,6 +665,7 @@
         <div class="row">
           <div class="widget text-center thanks">
             <h2 class="module-title font-alt">Thanks!</h2>
+            <p>To those who helped <span class="color-purple">transform</span> Swann Planning from conception to existence:</p>
             <p><a href="http://www.jonstrem.com/" target="_blank">Jon Strem</a></p>
             <p><a href="http://www.rdionefoto.com/" target="_blank">R. Dione Foto</a></p>
             <p><a href="http://www.nosegayflowers.com/" target="_blank">NoseGay Flowers</a></p>
@@ -694,7 +695,7 @@
 						<div class="widget">
 							<h5 class="widget-title font-alt"></h5>
 							<p>India Howard</p>
-              <p>Swann Planning, LLC.</p>
+              <p>Swann Planning, L.L.C.</p>
 							<p>Email: <a href="#">india@swannplanning.com</a></p>
               <p>Phone: 202.808.2281</p>
             </div>
@@ -717,7 +718,7 @@
 				<div class="row">
 	
 					<div class="col-sm-6">
-						<p class="copyright font-alt">© 2016 <a href="index.html">Swann Planning, LLC</a>, All Rights Reserved.</p>
+						<p class="copyright font-alt">© 2016 <a href="index.html">Swann Planning, L.L.C.</a>, All Rights Reserved.</p>
 					</div>
 	
 					<div class="col-sm-6">
