--- a/profiles/corporate/holiday.html
+++ b/profiles/corporate/holiday.html
@@ -387,7 +387,7 @@
           <div class="row">
 
             <div class="col-sm-6">
-              <p class="copyright font-alt">© 2016 <a href="../../index.html">Swann Planning, LLC</a>, All Rights Reserved.</p>
+              <p class="copyright font-alt">© 2016 <a href="../../index.html">Swann Planning, L.L.C.</a>, All Rights Reserved.</p>
             </div>
 
             <div class="col-sm-6">
