--- a/profiles/weddings/partial_planning.html
+++ b/profiles/weddings/partial_planning.html
@@ -101,7 +101,7 @@
 
         <div class="col-sm-12">
           <div class="portfolio-item">
-            <img class="portfolio-image" src="../../assets/images/weddings/wedding.jpg" alt="">
+            <img class="portfolio-image" src="../../assets/images/weddings/partial_planning1.jpg" alt="">
             <div class="portfolio-overlay">
               <div class="inner-overlay col-xs-8 col-xs-offset-2">
                 <h1>Partial Wedding Planning </h1>
@@ -402,7 +402,7 @@
         <div class="row">
 
           <div class="col-sm-6">
-            <p class="copyright font-alt">© 2016 <a href="../../index.html">Swann Planning, LLC</a>, All Rights Reserved.</p>
+            <p class="copyright font-alt">© 2016 <a href="../../index.html">Swann Planning, L.L.C.</a>, All Rights Reserved.</p>
           </div>
 
           <div class="col-sm-6">
